update project three

--- a/project three/index.html
+++ b/project three/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="parallax-1">
-        <h2>ALEXANDRIA PARKOUR</h2>
+        <h2>ALEXANDRIA</h2>
     </div>
     <div class="para-1">
         <p>
